# cindersentinel

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
aegis/src/: aegis_c_api.cpp  aegis_c_api.h  aegis_validate.cpp  cindersentinel_aegis.adb
bpf/: cindercentinel_xdp.bpf.c  cindersentinel_common.h  cindersentinel_tc.bpf.c  cindersentinel_xdp.bpf.c  gatekeeper_xdp.bpf.c
fuzzer/cbor/: cbor_fuzzer.cpp
fuzzer/cbor/scripts/: gen_seed_corpus.py  podman-fuzz.sh  repro-corpus.sh  repro.sh
scripts/: build-bpf.sh  build-fuzzer.sh  build-host.sh  build.sh  cindersentinel-aegis.sh  common.sh  dev-tc.sh  dev-xdp.sh  dev.sh  make-min-policy.sh  netns-down.sh  netns-up.sh  rules.sh  test-policy-lifecycle.sh  watch-counters.sh  xdp-attach.sh  xdp-detach.sh
scripts/ci/: build-podman.sh  podman-build.sh
src/: cindersentinel.cpp  cindersentineld.cpp
src/io_utils/: io_utils.cpp  io_utils.h
src/maps/: maps.cpp  maps.h
src/policy/: apply.cpp  apply.h  cbor.cpp  cbor.h  hash.cpp  hash.h  keys.h  limits.h  maps_pins.cpp  maps_pins.h  policy.cpp  policy.h  scheme.cpp  scheme.h  state_store.cpp  state_store.h
src/runtime/: runtime.cpp  runtime.h
tmp/: apply_atomic.txt  bpf_map_ops.txt  ports_and_limits.txt
